# KFM_Address_Verify

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/: __init__.py  main.py
src/kirkfrancismedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_main.py
