[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirkfrancismedia"
version = "0.1.0"
description = "Starter Python project for KirkFrancisMedia"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KirkFrancisMedia" }]
dependencies = [
    "gspread>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
kfm = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
